# finales_projekt

./:  Inhalt.ipynb  Beschreibung_Problem340.ipynb  Beschreibung_Problem84.ipynb  Datenanalyse Indien.py  LICENSE  Problem 2.py  Problem 307.py  Problem 340.py  Problem 6.py  Problem 84.py  Problem1.py  Problem2.py  Problem307.py  Problem340.py  Problem6.py  Problem84.py  README.md  Tutorial.ipynb  pyproject.toml  test.py
.ipynb_checkpoints/: Beschreibung_Problem1-checkpoint.ipynb  Problem1-checkpoint.py  README-checkpoint.md  Tutorial-checkpoint.ipynb
Packagename/: Problem340.py  Problem6.py
Tutorial/: Beschreibung_Problem1.ipynb  Beschreibung_Problem2.ipynb  Beschreibung_Problem307.ipynb  Beschreibung_Problem44.ipynb  Beschreibung_Problem6.ipynb  Beschreibung_Problem84.ipynb  Datenanalyse_Indien.ipynb
Tutorial/.ipynb_checkpoints/: Beschreibung_Problem1-checkpoint.ipynb  Beschreibung_Problem340-checkpoint.ipynb  Beschreibung_Problem6-checkpoint.ipynb
Unfertig/: Datenanalyse Indien.py  Problem44#.py  unbenannt0.py  unbenannt1.py
meinPaket/: Datenanalyse Indien.py  Datenanalyse_Indien.py  Problem1.py  Problem2.py  Problem307.py  Problem340.py  Problem44.py  Problem6.py  Problem84.py
