[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meinPaket"
version = "1"
description = 'final project package'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "KianaHeuser", email = "" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = ""
Issues = ""
Source = ""

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mypackage tests}"

[tool.coverage.run]
source_pkgs = ["mypackage", "tests"]
branch = true
parallel = true
omit = [
  "src/mypackage/__about__.py",
]

[tool.coverage.paths]
mypackage = ["src/mypackage", "*/mypackage/src/mypackage"]
tests = ["tests", "*/mypackage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]